k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fundraiser-service
  namespace: fundraiser
spec:
  type: NodePort
  selector:
    app: fundraiser
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
